--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
 		"react": "^18.3.1",
 		"react-comments-section": "^3.2.0",
 		"react-dom": "^18.3.1",
+		"react-fast-marquee": "^1.6.5",
 		"react-icons": "^5.3.0",
+		"react-infinite-scroll-component": "^6.1.0",
+		"react-intersection-observer": "^9.13.1",
+		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.5.0",
